# cpp_utils

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: BenchmarkTimer.h  Logger.h  Random.h  SimpleTimer.h  TimeMeasurement.h
src/: BenchmarkTimer.cpp  Logger.cpp  Random.cpp  SimpleTimer.cpp
test/: RandomTest.cpp
